SK - add a key to this page

--- a/webpages/SEPtimeline.html
+++ b/webpages/SEPtimeline.html
@@ -35,6 +35,18 @@
 </div>
 -->
 
+ <!-- key for this page-->
+
+<div class="demo-card key">
+  <p style="text-align: center"><strong>KEY</strong></p>
+  <p><span style="background-color: #f5c44b">&nbsp;</span> Accessibility</p>
+  <p><span style="background-color: #3ee9d1">&nbsp;</span> Event</p>
+  <p><span style="background-color: #ce43eb">&nbsp;</span> Lab research</p>
+  <p><span style="background-color: #4d92eb">&nbsp;</span> Online research</p>
+  <p><span style="background-color: #935300">&nbsp;</span> Partners collaboration - co-design</p>
+
+</div>
+
 
 <!-- Initiation -->
     <div class="demo-card demo-card--step2">
