--- a/webpages/SEPtimeline.html
+++ b/webpages/SEPtimeline.html
@@ -25,7 +25,7 @@
     <h2><span class="small">User Needs</span> Research</h2>
   </div>
   <div class="body">
-  AUDIENCE -  
+  AUDIENCE -
    <ul class="in_card">
         <li>G</li>
         <li></li>
@@ -177,9 +177,10 @@
 </div>
 
 
-
+<!--  DONE  -->
+<!--  DONE  -->
+<!--  DONE  -->
 <!-- May_31_Research.pptx A11y improvements -->
-
 <!--Research -->
 <div class="demo-card demo-card--step1">
   <div class="head">
@@ -189,7 +190,7 @@
     <h2><span class="small">31st May 2019</span>A11Y Research & Improvements</h2>
   </div>
   <div class="body">
-       AUDIENCE - 
+       AUDIENCE -
         <strong>Focus</strong>
        <ul class="in_card">
         <li>- A11Y Improvements based on issues found during research</li>
@@ -204,6 +205,9 @@
       </ul>
   </div>
 </div>
+<!--  DONE  -->
+<!--  DONE  -->
+<!--  DONE  -->
 
 
 <!--  DONE  -->
@@ -218,7 +222,7 @@
     <h2><span class="small">02 Aug 2019</span>Partners workshop</h2>
   </div>
   <div class="body">
-       AUDIENCE - 
+       AUDIENCE -
         <strong>Focus</strong>
         <p>Workshop to set initial user needs for the partner portal and the enquiry handling</p>
        <ul class="in_card">
@@ -245,7 +249,10 @@
 <!--  DONE  -->
 
 
-<!--Research -->
+<!--  DONE  -->
+<!--  DONE  -->
+<!--  DONE  -->
+<!--Research 5th Aug Brown-->
 <div class="demo-card demo-card--step5">
         <div class="head">
           <div class="number-box">
@@ -254,7 +261,7 @@
           <h2><span class="small">Week starting 05 Aug 2019</span>Partners interviews via Skype</h2>
         </div>
         <div class="body">
-             AUDIENCE - 
+             AUDIENCE -
               <strong>Focus</strong>
               <p>Refine the initial findings from the initial workshop</p>
              <ul class="in_card">
@@ -271,7 +278,9 @@
                 <li>- Knowledge base was not really something they wanted to use, and were happy not to have access to it. They would just use the SEP  website as their knowledge base</li>
             </ul>
         </div>
-      </div>
+        <!--  DONE  -->
+        <!--  DONE  -->
+        <!--  DONE  -->      </div>
 
 
 
@@ -284,7 +293,7 @@
     <h2><span class="small">6 Aug 2019</span>Online Research</h2>
   </div>
   <div class="body">
-       AUDIENCE - 
+       AUDIENCE -
         <strong>Focus</strong>
        <ul class="in_card">
         <li>- SEP Events</li>
@@ -312,7 +321,7 @@
     <h2><span class="small">9 Aug 2019</span>Online Research</h2>
   </div>
   <div class="body">
-       AUDIENCE - 
+       AUDIENCE -
         <strong>Focus</strong>
        <ul class="in_card">
         <li>- SEP Events</li>
@@ -339,7 +348,7 @@
           <h2><span class="small">Week starting 12 August 2019</span>Sense making and more interviews with partners</h2>
         </div>
         <div class="body">
-             AUDIENCE - 
+             AUDIENCE -
               <strong>Focus</strong>
               <p>Playback our results for partners portal with the wider team - technical interviews about enquiry handling</p>
              <ul class="in_card">
@@ -367,7 +376,7 @@
     <h2><span class="small">22 Aug 2019</span>Online Research</h2>
   </div>
   <div class="body">
-       AUDIENCE - 
+       AUDIENCE -
         <strong>Focus</strong>
        <ul class="in_card">
         <li>- SEP Events</li>
@@ -394,7 +403,7 @@
           <h2><span class="small">28 Aug 2019</span>Workshop with partners</h2>
         </div>
         <div class="body">
-             AUDIENCE - 
+             AUDIENCE -
               <strong>Focus</strong>
              <ul class="in_card">
               <li>- Refine the needs and agree consistent process for enquiry handling (all day in Stirling) + follow up Skype calls</li>
@@ -425,7 +434,7 @@
           <h2><span class="small">09 Sep 2019</span>Workshop with partners</h2>
         </div>
         <div class="body">
-             AUDIENCE - 
+             AUDIENCE -
               <strong>Focus</strong>
              <ul class="in_card">
               <li>- Co Design the Service Content Management System (Umbraco) and assess the access levels needed</li>
@@ -560,31 +569,37 @@
   </div>
 </div>
 
-<!--Research -->
+<!--  DONE  -->
+<!--  DONE  -->
+<!--  DONE  -->
+<!--Research  oct 17 image research-->
 <div class="demo-card demo-card--step4">
   <div class="head">
     <div class="number-box">
       <span>17</span>
     </div>
-    <h2><span class="small">7 Oct 2019</span>Online Research</h2>
+    <h2><span class="small">17 Oct 2019</span>Online Research</h2>
   </div>
   <div class="body">
         <strong>Focus</strong>
        <ul class="in_card">
-        <li>- Advisory Categories (Filters)</li>
-        <li>- </li>
-        <li>- </li>
+        <li>- Home page images</li>
       </ul>
-          <br><strong>Observations</strong>
+      <br><strong>Observations</strong>
 
       <ul class="in_card">
-        <li>- </li>
-        <li>- </li>
-
-        <li>- <a href="../files/" target="_blank">XXXXX</a></li>
+        <li>- Most people are fairly indifferent to teh homepage image</li>
+        <li class="issue">- White tetx on top of image is still not ideal</li>
+        <li>- There is a slight bias towards one of teh new images but not enough to really justify changing it</li>
+        <br>
+        <li>- <a href="../files/SEP2019_oct_17_Images.pdf" target="_blank">XXXXX</a></li>
       </ul>
   </div>
 </div>
+<!--  DONE  -->
+<!--  DONE  -->
+<!--  DONE  -->
+
 
 <!--Research -->
 <div class="demo-card demo-card--step4">
@@ -606,7 +621,7 @@
       <ul class="in_card">
         <li>- </li>
         <li>- </li>
-
+<br>
         <li>- <a href="../files/" target="_blank">XXXXX</a></li>
       </ul>
   </div>
