--- a/webpages/SEPtimeline.html
+++ b/webpages/SEPtimeline.html
@@ -616,13 +616,13 @@
         <li>- </li>
         <li>- </li>
       </ul>
-          <br><strong>Observations</strong>
-
+      <br>
+      <strong>Observations</strong>
       <ul class="in_card">
         <li>- </li>
         <li>- </li>
-<br>
-        <li>- <a href="../files/" target="_blank">XXXXX</a></li>
+        <br>
+        <li>- <a href="../files/" target="_blank">SEP Homepage Image testing results</a></li>
       </ul>
   </div>
 </div>
