--- a/webpages/SEPtimeline.html
+++ b/webpages/SEPtimeline.html
@@ -137,12 +137,13 @@
     <br><strong>Observations</strong>
 
       <ul class="in_card">
-        <li class="issue">- Issue: TRUST is still an issue because peoiple are not sure who teh site is. Gov.Scot helps but does not fully remove teh issue. </li>
+        <li class="issue">- Issue: TRUST is still an issue because peoiple are not sure who the site is. Gov.Scot helps but does not fully remove the issue. </li>
         <li class="issue">- Issue: Information density is too low on the search listing pages</li>
-        <li >- Location is teh top requested filter option</li>
-        <li >- Company Stage/Size is teh next most requested filter option</li>
+        <li >- Location is the top requested filter option</li>
+        <li >- Company Stage/Size is the next most requested filter option</li>
         <li class="issue">- Adddress lookup still has issues and needs to be improved</li>
         <li class="issue">- Search is not returning partial matches from incomplete strings (Scot should find Scottish)</li>
+        <br>
         <li><a href="../files/SEP_2019_may_22_usability.pdf" target="_blank">May 22nd Findings (PDF)</a></li>
       </ul>
   </div>
@@ -153,9 +154,11 @@
 
 
 
-
-<!--Research -->
-<div class="demo-card demo-card--step4">
+<!--  DONE  -->
+<!--  DONE  -->
+<!--  DONE  -->
+<!--Research  presentation -->
+<div class="demo-card demo-card--step5">
   <div class="head">
     <div class="number-box">
       <span>04</span>
@@ -170,12 +173,15 @@
         <li>- Now and Next</li>
       </ul>
 
-
-        <li><a href="../files/SEP_Siobhan_May_24_SDEP_presentation_for_Trade_Board_Small.pdf" target="_blank">Trade Team overview of SEP</a></li>
+      <ul class="in_card">
+        <br>
+        <li><a href="../files/SEP_Siobhan_May_24_SDEP_presentation_for__Board_Small.pdf" target="_blank"> Team overview of SEP</a></li>
       </ul>
   </div>
 </div>
-
+<!--  DONE  -->
+<!--  DONE  -->
+<!--  DONE  -->
 
 <!--  DONE  -->
 <!--  DONE  -->
@@ -201,7 +207,7 @@
       <ul class="in_card">
         <li>- Not overly technical fix's</li>
         <li>- Lots of core usability issues that are accentuated for A11Y audiences </li>
-        <li><a href="../files/SEP_2019_May_31_A11Y.pdf" target="_blank">May 2019 A11Y fix's</a></li>
+        <br><li><a href="../files/SEP_2019_May_31_A11Y.pdf" target="_blank">May 2019 A11Y fix's</a></li>
       </ul>
   </div>
 </div>
@@ -240,7 +246,7 @@
         <li>- Partner collaboration: share product info, customer information </li>
         <li>- Analytics, reporting, Key KPIs, Metric, Audit trails, GA</li>
         <li>- View feedback from customers</li>
-        <li>- <a href="../files/SEP-Partner-Prioritisation-020819-V1.xlsx" target="_blank">Partner Prioritisation Spreadsheet</a> (Excel file)</li>
+        <br><li><a href="../files/SEP-Partner-Prioritisation-020819-V1.xlsx" target="_blank">Partner Prioritisation Spreadsheet</a> (Excel file)</li>
       </ul>
   </div>
 </div>
@@ -278,10 +284,11 @@
                 <li>- Knowledge base was not really something they wanted to use, and were happy not to have access to it. They would just use the SEP  website as their knowledge base</li>
             </ul>
         </div>
-        <!--  DONE  -->
-        <!--  DONE  -->
-        <!--  DONE  -->      </div>
+      </div>
 
+      <!--  DONE  -->
+      <!--  DONE  -->
+      <!--  DONE  -->
 
 
 <!--Research -->
@@ -339,7 +346,13 @@
   </div>
 </div>
 
- <!--Research -->
+
+
+
+<!--  DONE  -->
+<!--  DONE  -->
+<!--  DONE  -->
+<!--Research  12 Aug-->
 <div class="demo-card demo-card--step5">
         <div class="head">
           <div class="number-box">
@@ -359,13 +372,16 @@
               <strong>Refined needs</strong>
               <p>The only thing we really need a portal for is to manage service content, reporting can be done  elsewhere and no time to build a Knowledge Base from scratch so will use the existing KB</p>
               <ul class="in_card">
-                <li>- decision to use Umbraco for service content management</li>
-                <li>- <a href="../files/SEP-Partner-Portal-User-needs-draft.xlsx" target="_blank"> Refined prioritised needs for the service content management</a> (Excel file)</li>
-                <li>- <a href="../files/Enquiry Handling - high level story map (to be used on Wednesday 2808 ).pdf" target="_blank"> Initial storymap for enquiry handling</a> (pdf)</li>
+                <li>Decision to use Umbraco for service content management</li>
+                <br>
+                <li><a href="../files/SEP-Partner-Portal-User-needs-draft.xlsx" target="_blank"> Refined prioritised needs for the service content management</a> (Excel file)</li>
+                <li><a href="../files/Enquiry Handling - high level story map (to be used on Wednesday 2808 ).pdf" target="_blank"> Initial storymap for enquiry handling</a> (pdf)</li>
             </ul>
         </div>
       </div>
-
+<!--  DONE  -->
+<!--  DONE  -->
+<!--  DONE  -->
 
 <!--Research -->
 <div class="demo-card demo-card--step4">
@@ -419,8 +435,9 @@
                 <li>- Should ask if trading or not and adjust the form based on this</li>
                 <li>- Could ask for size of business if trading</li>
                 <li>- Agreement that we need a unique SLA for all for initial answer</li>
-                <li>- <a href="../files/SEP Partner  Service Content Management  CMS - Storymap - version on 2019-08-29.pdf" target="_blank"> Refined story map for service content management</a> (pdf)</li>
-                <li>- <a href="../files/Single entry point - Knowledge base - 2019-08-30.pdf" target="_blank"> Story map for Knowledge base needs</a> (pdf)</li>
+                <br>
+                <li><a href="../files/SEP Partner  Service Content Management  CMS - Storymap - version on 2019-08-29.pdf" target="_blank"> Refined story map for service content management</a> (pdf)</li>
+                <li><a href="../files/Single entry point - Knowledge base - 2019-08-30.pdf" target="_blank"> Story map for Knowledge base needs</a> (pdf)</li>
             </ul>
         </div>
       </div>
@@ -453,6 +470,40 @@
         </div>
       </div>
 
+
+      <!--Research  September - Enquiry form testing-->
+      <div class="demo-card demo-card--step4">
+        <div class="head">
+          <div class="number-box">
+            <span>13</span>
+          </div>
+          <h2><span class="small">Sep 2019</span>Online Research</h2>
+        </div>
+        <div class="body">
+             AUDIENCE - 15 Unmoderated and 3 Face to Face
+              <strong>Focus</strong>
+             <ul class="in_card">
+              <li>- Enquiry Form testing</li>
+            </ul>
+                <br><strong>Observations</strong>
+
+            <ul class="in_card">
+              <li>- Both the forms are very simple, short and easy to use</li>
+              <li>- The big green tick on the success page was welcomed</li>
+              <li>- Business and Address lookup tested well</li>
+              <li>- No major frustrations were observed</li>
+              <li class="issue">- Small Fonts were an issue at the top of the forms</li>
+              <li class="issue">- People want guidance on how to frame their qurstion or message</li>
+
+              <br>
+              <li><a href="../files/SEP_2019_Sep_EnquiryFormTestingV5b.pdf" target="_blank">Enquiry Form testing</a></li>
+            </ul>
+        </div>
+      </div>
+
+
+
+
 <!--  DONE  -->
 <!--  DONE  -->
 <!--  DONE  -->
@@ -481,9 +532,9 @@
         <li>- Easy to use</li>
         <li>- Like that the form is very simple</li>
         <li class="issue">- Contact us and Enqury forms look the same</li>
-        <li class="issue">- Would like a phone number in teh enquiry success message</li>
-
-        <li>- <a href="../files/SEP_2019_sep_10_Prex-Start_enquiries_Axure.pdf" target="_blank">Sep 10th Findings (PDF)</a></li>
+        <li class="issue">- Would like a phone number in the enquiry success message</li>
+        <br>
+        <li><a href="../files/SEP_2019_sep_10_Prex-Start_enquiries_Axure.pdf" target="_blank">Sep 10th Findings (PDF)</a></li>
       </ul>
   </div>
 </div>
@@ -588,11 +639,12 @@
       <br><strong>Observations</strong>
 
       <ul class="in_card">
-        <li>- Most people are fairly indifferent to teh homepage image</li>
-        <li class="issue">- White tetx on top of image is still not ideal</li>
-        <li>- There is a slight bias towards one of teh new images but not enough to really justify changing it</li>
+        <li>- Most people are fairly indifferent to the homepage image</li>
+        <li>- There is a slight bias towards one of the new images but not enough to really justify changing it</li>
+        <li class="issue">- White text on top of image is still not ideal</li>
+        <li>- ps. They are not really that bothered about the grey footer, even though it looks a bit dull</li>
         <br>
-        <li>- <a href="../files/SEP2019_oct_17_Images.pdf" target="_blank">XXXXX</a></li>
+        <li><a href="../files/SEP2019_oct_17_Images.pdf" target="_blank">SEP Homepage Image testing results</a></li>
       </ul>
   </div>
 </div>
@@ -601,7 +653,7 @@
 <!--  DONE  -->
 
 
-<!--Research -->
+<!--Research Interface content testing-->
 <div class="demo-card demo-card--step4">
   <div class="head">
     <div class="number-box">
@@ -612,17 +664,19 @@
   <div class="body">
         <strong>Focus</strong>
        <ul class="in_card">
-        <li>- Homepage Image Testing</li>
-        <li>- </li>
-        <li>- </li>
+        <li>- Testing INTERFACE content</li>
       </ul>
       <br>
       <strong>Observations</strong>
       <ul class="in_card">
-        <li>- </li>
-        <li>- </li>
+        <li class="issue">- Looks a bit formal. Like a WORD document</li>
+        <li class="issue">- Could do with indicitive time frames</li>
+        <li class="issue">- Needs a contact Tel: number</li>
+        <li class="issue">- Too much Jargon</li>
+        <li>- Shorter is better</li>
+        <li>- Covers a lot</li>
         <br>
-        <li>- <a href="../files/" target="_blank">SEP Homepage Image testing results</a></li>
+        <li><a href="../files/SEP_2019_Oct_Images-InterfaceContent-Categories_Research.pdf" target="_blank">INTERFACE content & Image testing</a></li>
       </ul>
   </div>
 </div>
@@ -657,8 +711,7 @@
         <li class="issue">- Issue: It is not being obvious when a link is jumping off to another website</li>
         <li class="issue">- Issue: The grey footer was modestly criticised, (only on the homepage), but only in the absence of anything serious to point out</li>
         <li class="issue">- Issue: No method for reusing the address/company search after initial use.</li>
-        <li>- </li>
-
+        <br>
         <li><a href="../files/SEP_2019_Oct_29_CustomerUAT.pdf" target="_blank">Oct 28th 2019 Findings Report</a></li>
       </ul>
   </div>
