--- a/webpages/SEPtimeline.html
+++ b/webpages/SEPtimeline.html
@@ -594,31 +594,7 @@
   </div>
 </div>
 
-<!--Research -->
-<div class="demo-card demo-card--step4">
-  <div class="head">
-    <div class="number-box">
-      <span>16</span>
-    </div>
-    <h2><span class="small">2 Oct 2019</span>Online Research</h2>
-  </div>
-  <div class="body">
-        <strong>Focus</strong>
-       <ul class="in_card">
-        <li>- Contact Us</li>
-        <li>- </li>
-        <li>- </li>
-      </ul>
-          <br><strong>Observations</strong>
 
-      <ul class="in_card">
-        <li>- </li>
-        <li>- </li>
-
-        <li>- <a href="../files/" target="_blank">XXXXX</a></li>
-      </ul>
-  </div>
-</div>
 
 <!--  DONE  -->
 <!--  DONE  -->
@@ -682,7 +658,34 @@
 </div>
 
 
-<!--F2F Research 13-->
+<!--Research -->
+<div class="demo-card demo-card--step4">
+  <div class="head">
+    <div class="number-box">
+      <span>19</span>
+    </div>
+    <h2><span class="small">25 Oct 2019</span>Online Research</h2>
+  </div>
+  <div class="body">
+        <strong>Focus</strong>
+       <ul class="in_card">
+        <li>- Event Categories</li>
+      </ul>
+          <br><strong>Observations</strong>
+
+      <ul class="in_card">
+        <li>- Categories are quite clear</li>
+        <li>- Categories are easy to use</li>
+        <li>- SUGGESTION: Add a category for STAGE OF BUSINESS (Start Up, Growth, Exporting etc...)</li>
+        <li>- Issues around default distance which is now being taken up in ongoing research</li>
+        <br>
+        <li><a href="../files/SEP_2019_Oct_25_Event_Category.pdf" target="_blank">Event Category Testing results</a></li>
+      </ul>
+  </div>
+</div>
+
+
+<!--F2F Research 19-->
 <div class="demo-card demo-card--step3">
   <div class="head">
     <div class="number-box">
