mk Lunchtime commit
mk Lunchtime commit
6/11/2019

--- a/webpages/SEPtimeline.html
+++ b/webpages/SEPtimeline.html
@@ -48,7 +48,9 @@
 
 </div>
 
-
+<!--  DONE  -->
+<!--  DONE  -->
+<!--  DONE  -->
 <!-- Initiation -->
     <div class="demo-card demo-card--step2">
       <div class="head">
@@ -64,12 +66,16 @@
       </ul>
       </div>
     </div>
+    <!--  DONE  -->
+    <!--  DONE  -->
+    <!--  DONE  -->
 
 
+
 <!--  DONE  -->
 <!--  DONE  -->
 <!--  DONE  -->
-<!--Research -->
+<!--Research 8th May 2019 -->
 <div class="demo-card demo-card--step4">
   <div class="head">
     <div class="number-box">
@@ -107,9 +113,7 @@
 <!--  DONE  -->
 <!--  DONE  -->
 
-
 <!--Research -->
-
 
 <!--  DONE  -->
 <!--  DONE  -->
@@ -151,8 +155,6 @@
 <!--  DONE  -->
 <!--  DONE  -->
 <!--  DONE  -->
-
-
 
 <!--  DONE  -->
 <!--  DONE  -->
@@ -291,64 +293,6 @@
       <!--  DONE  -->
 
 
-<!--Research -->
-<div class="demo-card demo-card--step4">
-  <div class="head">
-    <div class="number-box">
-      <span>07</span>
-    </div>
-    <h2><span class="small">6 Aug 2019</span>Online Research</h2>
-  </div>
-  <div class="body">
-       AUDIENCE -
-        <strong>Focus</strong>
-       <ul class="in_card">
-        <li>- SEP Events</li>
-        <li>- </li>
-        <li>- </li>
-      </ul>
-          <br><strong>Observations</strong>
-
-      <ul class="in_card">
-        <li>- </li>
-        <li>- </li>
-
-        <li>- <a href=../"files/" target="_blank">XXXXX</a></li>
-      </ul>
-  </div>
-</div>
-
-
-<!--Research -->
-<div class="demo-card demo-card--step4">
-  <div class="head">
-    <div class="number-box">
-      <span>08</span>
-    </div>
-    <h2><span class="small">9 Aug 2019</span>Online Research</h2>
-  </div>
-  <div class="body">
-       AUDIENCE -
-        <strong>Focus</strong>
-       <ul class="in_card">
-        <li>- SEP Events</li>
-        <li>- </li>
-        <li>- </li>
-      </ul>
-          <br><strong>Observations</strong>
-
-      <ul class="in_card">
-        <li>- </li>
-        <li>- </li>
-
-        <li>- <a href=../"files/" target="_blank">XXXXX</a></li>
-      </ul>
-  </div>
-</div>
-
-
-
-
 <!--  DONE  -->
 <!--  DONE  -->
 <!--  DONE  -->
@@ -383,34 +327,44 @@
 <!--  DONE  -->
 <!--  DONE  -->
 
-<!--Research -->
+<!--  DONE  -->
+<!--  DONE  -->
+<!--  DONE  -->
+<!--Research Aug 22 2019-->
 <div class="demo-card demo-card--step4">
   <div class="head">
     <div class="number-box">
       <span>10</span>
     </div>
-    <h2><span class="small">22 Aug 2019</span>Online Research</h2>
+    <h2><span class="small">6th, 7th & 22nd Aug 2019</span>Online Research</h2>
   </div>
   <div class="body">
-       AUDIENCE -
+       AUDIENCE - 45 from Userzoom Onlime Panel
         <strong>Focus</strong>
        <ul class="in_card">
         <li>- SEP Events</li>
-        <li>- </li>
-        <li>- </li>
       </ul>
           <br><strong>Observations</strong>
 
       <ul class="in_card">
-        <li>- </li>
-        <li>- </li>
-
-        <li>- <a href="../files/" target="_blank">XXXXX</a></li>
+        <li>- Filters worked quite well</li>
+        <li>- Use of the map is a matter of preference and is fairly evenly split</li>
+        <li>- People expect to be able to search by both./either Post Code and Town</li>
+        <li>- Milage options eed to cover a lot of distance and granularity to reflect the different sensibilities between central belt and more rural areas of Scotland</li>
+        <li class="issue">The numbers change between Support & Events. Neither of these numbers matched with the number on the home page (because that is the sum of both of these). This confused people</li>
+        <br><li><a href="../files/SEP_2019_Aug_22_Events_testing.pdf" target="_blank">SEP Events Testing Results</a></li>
       </ul>
   </div>
 </div>
+<!--  DONE  -->
+<!--  DONE  -->
+<!--  DONE  -->
 
-        <!--Research -->
+
+<!--  DONE  -->
+<!--  DONE  -->
+<!--  DONE  -->
+<!--Research 28th Aug-->
 <div class="demo-card demo-card--step5">
         <div class="head">
           <div class="number-box">
@@ -441,8 +395,14 @@
             </ul>
         </div>
       </div>
+<!--  DONE  -->
+<!--  DONE  -->
+<!--  DONE  -->
 
-<!--Research -->
+<!--  DONE  -->
+<!--  DONE  -->
+<!--  DONE  -->
+<!--Research 9th Sep 2019-->
 <div class="demo-card demo-card--step5">
         <div class="head">
           <div class="number-box">
@@ -500,9 +460,9 @@
             </ul>
         </div>
       </div>
-
-
-
+      <!--  DONE  -->
+      <!--  DONE  -->
+      <!--  DONE  -->
 
 <!--  DONE  -->
 <!--  DONE  -->
@@ -542,7 +502,9 @@
 <!--  DONE  -->
 <!--  DONE  -->
 
-<!--Research -->
+<!--  DONE  -->
+<!--  DONE  -->
+<!--Research 17 September-->
 <div class="demo-card demo-card--step5">
   <div class="head">
     <div class="number-box">
@@ -565,8 +527,13 @@
       </ul>
   </div>
 </div>
+<!--  DONE  -->
+<!--  DONE  -->
 
-<!--Research -->
+
+<!--  DONE  -->
+<!--  DONE  -->
+<!--Research 24 September-->
 <div class="demo-card demo-card--step5">
   <div class="head">
     <div class="number-box">
@@ -593,7 +560,8 @@
       </ul>
   </div>
 </div>
-
+<!--  DONE  -->
+<!--  DONE  -->
 
 
 <!--  DONE  -->
@@ -628,7 +596,8 @@
 <!--  DONE  -->
 <!--  DONE  -->
 
-
+<!--  DONE  -->
+<!--  DONE  -->
 <!--Research Interface content testing-->
 <div class="demo-card demo-card--step4">
   <div class="head">
@@ -656,9 +625,13 @@
       </ul>
   </div>
 </div>
+<!--  DONE  -->
+<!--  DONE  -->
 
 
-<!--Research -->
+<!--  DONE  -->
+<!--  DONE  -->
+<!--Research 25 Oct-->
 <div class="demo-card demo-card--step4">
   <div class="head">
     <div class="number-box">
@@ -676,6 +649,7 @@
       <ul class="in_card">
         <li>- Categories are quite clear</li>
         <li>- Categories are easy to use</li>
+        <li>- Distance filters were popular</li>
         <li>- SUGGESTION: Add a category for STAGE OF BUSINESS (Start Up, Growth, Exporting etc...)</li>
         <li>- Issues around default distance which is now being taken up in ongoing research</li>
         <br>
@@ -683,8 +657,11 @@
       </ul>
   </div>
 </div>
+<!--  DONE  -->
+<!--  DONE  -->
 
-
+<!--  DONE  -->
+<!--  DONE  -->
 <!--F2F Research 19-->
 <div class="demo-card demo-card--step3">
   <div class="head">
@@ -719,10 +696,12 @@
       </ul>
   </div>
 </div>
+<!--  DONE  -->
+<!--  DONE  -->
 
-
-
-<!--F2F Research 14-->
+<!--  DONE  -->
+<!--  DONE  -->
+<!--F2F Research 30 Oct 2019-->
 <div class="demo-card demo-card--step2">
   <div class="head">
     <div class="number-box">
@@ -749,12 +728,16 @@
         <li class="issue">- Issue: No method for reusing the address/company search after initial use.</li>
 
         <br>
-        <li><a href="../files/" target="_blank">XXXXX</a></li>
+        <li><a href="../files/SEP_2019_Oct_30_Feedback_Paras_Research.pdf" target="_blank">Feedback on Content for Emails AND SEP UAT</a></li>
       </ul>
   </div>
 </div>
+<!--  DONE  -->
+<!--  DONE  -->
 
-
+<!--  DONE  -->
+<!--  DONE  -->
+<!--  DONE  -->
 <!--A11y Research -->
 <div class="demo-card demo-card--step1">
   <div class="head">
@@ -784,7 +767,9 @@
       </ul>
   </div>
 </div>
-
+<!--  DONE  -->
+<!--  DONE  -->
+<!--  DONE  -->
 </div>
 </section>
 
