--- a/webpages/SEPtimeline.html
+++ b/webpages/SEPtimeline.html
@@ -189,7 +189,7 @@
 <!--  DONE  -->
 <!--  DONE  -->
 <!-- May_31_Research.pptx A11y improvements -->
-<!--Research -->
+
 <div class="demo-card demo-card--step1">
   <div class="head">
     <div class="number-box">
@@ -217,6 +217,39 @@
 <!--  DONE  -->
 <!--  DONE  -->
 
+
+<!--  DONE  -->
+<!--  DONE  -->
+<!--  DONE  -->
+<!-- June_Research.pptx A11y improvements -->
+
+<div class="demo-card demo-card--step1">
+  <div class="head">
+    <div class="number-box">
+      <span>00</span>
+    </div>
+    <h2><span class="small">June 2019</span>A11Y Research & Improvements</h2>
+  </div>
+  <div class="body">
+       AUDIENCE -
+        <strong>Focus</strong>
+       <ul class="in_card">
+        <li>- A11Y Improvements based on issues found during research implemnented over 2 sprints in June</li>
+
+      </ul>
+          <br><strong>Observations</strong>
+
+      <ul class="in_card">
+        <li>- Not overly technical fix's</li>
+        <li>- Lots of core usability issues that are accentuated for A11Y audiences </li>
+        <br><li><a href="../files/SEP_2019_may_31_A11Y_Sprint6.pdf" target="_blank">June 2019 A11Y fix list Sprint 6</a></li>        
+        <br><li><a href="../files/SEP_2019_June_14_A11Y_Sprint7.pdf" target="_blank">June 2019 A11Y fix list Sprint 7</a></li>
+      </ul>
+  </div>
+</div>
+<!--  DONE  -->
+<!--  DONE  -->
+<!--  DONE  -->
 
 <!--  DONE  -->
 <!--  DONE  -->
@@ -291,6 +324,9 @@
       <!--  DONE  -->
       <!--  DONE  -->
       <!--  DONE  -->
+
+
+
 
 
 <!--  DONE  -->
@@ -417,7 +453,6 @@
               <li>- Co Design the Service Content Management System (Umbraco) and assess the access levels needed</li>
               <li>- Discuss the service content life cycle </li>
               <li>- Create two new persona (content manager and Enquiry Handler) based on the needs of the partners and the person in these roles in the SEP delivery team</li>
-
             </ul>
                 <br>
               <strong>Personas and refined storymap</strong>
@@ -430,7 +465,9 @@
         </div>
       </div>
 
-
+      <!--  DONE  -->
+      <!--  DONE  -->
+      <!--  DONE  -->
       <!--Research  September - Enquiry form testing-->
       <div class="demo-card demo-card--step4">
         <div class="head">
@@ -444,10 +481,9 @@
               <strong>Focus</strong>
              <ul class="in_card">
               <li>- Enquiry Form testing</li>
-            </ul>
-                <br><strong>Observations</strong>
-
-            <ul class="in_card">
+             </ul>
+             <br><strong>Observations</strong>
+             <ul class="in_card">
               <li>- Both the forms are very simple, short and easy to use</li>
               <li>- The big green tick on the success page was welcomed</li>
               <li>- Business and Address lookup tested well</li>
@@ -463,6 +499,46 @@
       <!--  DONE  -->
       <!--  DONE  -->
       <!--  DONE  -->
+
+
+      <!--  DONE  -->
+      <!--  DONE  -->
+      <!--  DONE  -->
+      <!--Research  September - Feedback for Null Search testing-->
+      <div class="demo-card demo-card--step4">
+        <div class="head">
+          <div class="number-box">
+            <span>13</span>
+          </div>
+          <h2><span class="small">Sep 2019</span>Online Research</h2>
+        </div>
+        <div class="body">
+             AUDIENCE - 15 Unmoderated and 3 Face to Face
+              <strong>Focus</strong>
+             <ul class="in_card">
+              <li>- Test Feedback options for Null Results scenario</li>
+             </ul>
+             <br><strong>Observations</strong>
+             <ul class="in_card">
+              <li>- Top Right or Bottom Right, is where peoiple expect to see a phone number</li>
+              <li>- People are pretty split on Phone vs Email vs Form Vs Chat</li>
+              <li>- If Chat is there then it HAS to be a real person behind it</li>
+              <li>- When time is limited, people are more likely to fire off an email and wait for a response</li>
+              <li>- If they are in a rush, then they would call.</li>
+              <li>- Forms only make sense to people with spare time and not in a rush</li>
+              <li>- Forms inherently breed distrust and need work done to overcome this</li>
+              <li>- Short Forms are OK. Long Forms lead to people just phoning instead</li>
+              <li>- The options displayed got generically favourable responses</li>
+              <br>
+              <li><a href="../files/SEP_2019_Sep_Contect_us_when_you_dont_find_anything_Testing.pdf" target="_blank">Feedback option testing for Null Results pages</a></li>
+            </ul>
+        </div>
+      </div>
+      <!--  DONE  -->
+      <!--  DONE  -->
+      <!--  DONE  -->
+
+
 
 <!--  DONE  -->
 <!--  DONE  -->
