--- a/webpages/SEPtimeline.html
+++ b/webpages/SEPtimeline.html
@@ -11,29 +11,10 @@
 
 <body>
 <section id=timeline>
-<h1>SEP Beta Research Timeline</h1>
+<h1>SEP Beta Timeline</h1>
 <!--p class="leader">Newer activities at the top</p-->
 <div class="demo-card-wrapper">
 
-
-<!--
-<div class="demo-card demo-card--step4">
-  <div class="head">
-    <div class="number-box">
-      <span>03</span>
-    </div>
-    <h2><span class="small">User Needs</span> Research</h2>
-  </div>
-  <div class="body">
-  AUDIENCE -
-   <ul class="in_card">
-        <li>G</li>
-        <li></li>
-        <li></li>
-      </ul>
-  </div>
-</div>
--->
 
  <!-- key for this page-->
 
@@ -48,9 +29,7 @@
 
 </div>
 
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
+
 <!-- Initiation -->
     <div class="demo-card demo-card--step2">
       <div class="head">
@@ -66,15 +45,8 @@
       </ul>
       </div>
     </div>
-    <!--  DONE  -->
-    <!--  DONE  -->
-    <!--  DONE  -->
 
 
-
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
 <!--Research 8th May 2019 -->
 <div class="demo-card demo-card--step4">
   <div class="head">
@@ -109,15 +81,10 @@
     <!-- <img src="http://placehold.it/1000x500" alt="Graphic"> -->
   </div>
 </div>
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
+
 
 <!--Research -->
 
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
 <!--Lab Research may 22nd-->
 <div class="demo-card demo-card--step3">
   <div class="head">
@@ -152,13 +119,7 @@
       </ul>
   </div>
 </div>
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
 
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
 <!--Research  presentation -->
 <div class="demo-card demo-card--step5">
   <div class="head">
@@ -177,23 +138,17 @@
 
       <ul class="in_card">
         <br>
-        <li><a href="../files/SEP_Siobhan_May_24_SDEP_presentation_for__Board_Small.pdf" target="_blank"> Team overview of SEP</a></li>
+        <li><a href="../files/SEP_Siobhan_May_24_SDEP_presentation_for_Trade_Board_Small.pdf" target="_blank"> Team overview of SEP</a></li>
       </ul>
   </div>
 </div>
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
 
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
 <!-- May_31_Research.pptx A11y improvements -->
 
 <div class="demo-card demo-card--step1">
   <div class="head">
     <div class="number-box">
-      <span>00</span>
+      <span>05</span>
     </div>
     <h2><span class="small">31st May 2019</span>A11Y Research & Improvements</h2>
   </div>
@@ -213,20 +168,13 @@
       </ul>
   </div>
 </div>
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
 
-
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
 <!-- June_Research.pptx A11y improvements -->
 
 <div class="demo-card demo-card--step1">
   <div class="head">
     <div class="number-box">
-      <span>00</span>
+      <span>06</span>
     </div>
     <h2><span class="small">June 2019</span>A11Y Research & Improvements</h2>
   </div>
@@ -247,18 +195,12 @@
       </ul>
   </div>
 </div>
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
 
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
 <!--Research 2nd Aug -->
 <div class="demo-card demo-card--step5">
   <div class="head">
     <div class="number-box">
-      <span>05</span>
+      <span>07</span>
     </div>
     <h2><span class="small">02 Aug 2019</span>Partners workshop</h2>
   </div>
@@ -285,19 +227,12 @@
       </ul>
   </div>
 </div>
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
 
-
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
 <!--Research 5th Aug Brown-->
 <div class="demo-card demo-card--step5">
         <div class="head">
           <div class="number-box">
-            <span>06</span>
+            <span>08</span>
           </div>
           <h2><span class="small">Week starting 05 Aug 2019</span>Partners interviews via Skype</h2>
         </div>
@@ -321,17 +256,7 @@
         </div>
       </div>
 
-      <!--  DONE  -->
-      <!--  DONE  -->
-      <!--  DONE  -->
 
-
-
-
-
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
 <!--Research  12 Aug-->
 <div class="demo-card demo-card--step5">
         <div class="head">
@@ -352,20 +277,14 @@
               <strong>Refined needs</strong>
               <p>The only thing we really need a portal for is to manage service content, reporting can be done  elsewhere and no time to build a Knowledge Base from scratch so will use the existing KB</p>
               <ul class="in_card">
-                <li>Decision to use Umbraco for service content management</li>
+                <li><strong>Decision to use Umbraco for service content management</strong></li>
                 <br>
                 <li><a href="../files/SEP-Partner-Portal-User-needs-draft.xlsx" target="_blank"> Refined prioritised needs for the service content management</a> (Excel file)</li>
                 <li><a href="../files/Enquiry Handling - high level story map (to be used on Wednesday 2808 ).pdf" target="_blank"> Initial storymap for enquiry handling</a> (pdf)</li>
             </ul>
         </div>
       </div>
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
 
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
 <!--Research Aug 22 2019-->
 <div class="demo-card demo-card--step4">
   <div class="head">
@@ -392,14 +311,7 @@
       </ul>
   </div>
 </div>
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
 
-
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
 <!--Research 28th Aug-->
 <div class="demo-card demo-card--step5">
         <div class="head">
@@ -496,19 +408,12 @@
             </ul>
         </div>
       </div>
-      <!--  DONE  -->
-      <!--  DONE  -->
-      <!--  DONE  -->
 
-
-      <!--  DONE  -->
-      <!--  DONE  -->
-      <!--  DONE  -->
       <!--Research  September - Feedback for Null Search testing-->
       <div class="demo-card demo-card--step4">
         <div class="head">
           <div class="number-box">
-            <span>13</span>
+            <span>14</span>
           </div>
           <h2><span class="small">Sep 2019</span>Online Research</h2>
         </div>
@@ -534,20 +439,12 @@
             </ul>
         </div>
       </div>
-      <!--  DONE  -->
-      <!--  DONE  -->
-      <!--  DONE  -->
 
-
-
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
 <!--Research Sept 10th -->
 <div class="demo-card demo-card--step4">
   <div class="head">
     <div class="number-box">
-      <span>13</span>
+      <span>15</span>
     </div>
     <h2><span class="small">10 Sep 2019</span>Online Research</h2>
   </div>
@@ -574,17 +471,12 @@
       </ul>
   </div>
 </div>
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
 
-<!--  DONE  -->
-<!--  DONE  -->
 <!--Research 17 September-->
 <div class="demo-card demo-card--step5">
   <div class="head">
     <div class="number-box">
-      <span>14</span>
+      <span>16</span>
     </div>
     <h2><span class="small">17 Sep 2019</span>SLAED Meeting</h2>
   </div>
@@ -603,17 +495,12 @@
       </ul>
   </div>
 </div>
-<!--  DONE  -->
-<!--  DONE  -->
 
-
-<!--  DONE  -->
-<!--  DONE  -->
 <!--Research 24 September-->
 <div class="demo-card demo-card--step5">
   <div class="head">
     <div class="number-box">
-      <span>15</span>
+      <span>17</span>
     </div>
     <h2><span class="small">Week starting 24 Sep 2019</span>New Partners + EFRS workshop</h2>
   </div>
@@ -636,18 +523,12 @@
       </ul>
   </div>
 </div>
-<!--  DONE  -->
-<!--  DONE  -->
 
-
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
 <!--Research  oct 17 image research-->
 <div class="demo-card demo-card--step4">
   <div class="head">
     <div class="number-box">
-      <span>17</span>
+      <span>18</span>
     </div>
     <h2><span class="small">17 Oct 2019</span>Online Research</h2>
   </div>
@@ -668,17 +549,12 @@
       </ul>
   </div>
 </div>
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
 
-<!--  DONE  -->
-<!--  DONE  -->
 <!--Research Interface content testing-->
 <div class="demo-card demo-card--step4">
   <div class="head">
     <div class="number-box">
-      <span>18</span>
+      <span>19</span>
     </div>
     <h2><span class="small">16-17 Oct 2019</span>Online Research</h2>
   </div>
@@ -701,17 +577,12 @@
       </ul>
   </div>
 </div>
-<!--  DONE  -->
-<!--  DONE  -->
 
-
-<!--  DONE  -->
-<!--  DONE  -->
 <!--Research 25 Oct-->
 <div class="demo-card demo-card--step4">
   <div class="head">
     <div class="number-box">
-      <span>19</span>
+      <span>20</span>
     </div>
     <h2><span class="small">25 Oct 2019</span>Online Research</h2>
   </div>
@@ -733,16 +604,12 @@
       </ul>
   </div>
 </div>
-<!--  DONE  -->
-<!--  DONE  -->
 
-<!--  DONE  -->
-<!--  DONE  -->
 <!--F2F Research 19-->
 <div class="demo-card demo-card--step3">
   <div class="head">
     <div class="number-box">
-      <span>19</span>
+      <span>21</span>
     </div>
     <h2><span class="small">29 Oct 2019</span>Lab Research</h2>
   </div>
@@ -772,16 +639,12 @@
       </ul>
   </div>
 </div>
-<!--  DONE  -->
-<!--  DONE  -->
 
-<!--  DONE  -->
-<!--  DONE  -->
 <!--F2F Research 30 Oct 2019-->
 <div class="demo-card demo-card--step2">
   <div class="head">
     <div class="number-box">
-      <span>20</span>
+      <span>22</span>
     </div>
     <h2><span class="small">30 Oct  2019</span>F2F Research at Event</h2>
   </div>
@@ -808,17 +671,12 @@
       </ul>
   </div>
 </div>
-<!--  DONE  -->
-<!--  DONE  -->
 
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
 <!--A11y Research -->
 <div class="demo-card demo-card--step1">
   <div class="head">
     <div class="number-box">
-      <span>21</span>
+      <span>23</span>
     </div>
     <h2><span class="small">1 Nov 2019</span>Accessibility Research</h2>
   </div>
@@ -843,9 +701,7 @@
       </ul>
   </div>
 </div>
-<!--  DONE  -->
-<!--  DONE  -->
-<!--  DONE  -->
+
 </div>
 </section>
 
