SK added a11y doc + conclusions

--- a/webpages/SEPtimeline.html
+++ b/webpages/SEPtimeline.html
@@ -524,11 +524,41 @@
   </div>
 </div>
 
+  
+<!-- adding internal research -->
+ <div class="demo-card demo-card--step1">
+  <div class="head">
+    <div class="number-box">
+      <span>18</span>
+    </div>
+    <h2><span class="small">4 Oct 2019</span>Accessibility Research</h2>
+  </div>
+  <div class="body">
+    <strong>Focus</strong>
+    <p>Internal research on the potential accessibility impact for the internal users</p>
+    <br>
+    <strong>Observations</strong>
+
+      <ul class="in_card">
+        <li class="issue">- The potential risk is mostly Umbraco which is the only new system internal staff will be using</li>
+        <li>- The rest won’t be any worse than it is at the moment as it’s their As-Is processes mostly</li>
+        <li class="issue">- One potential risk to keep in mind is how we deal with the regular communications among partners in the future and during the onboarding process</li>
+        <li>- Reporting to review once we know more about what form it will take</li>
+
+        <br>
+        <li><a href="../files/SEP-A11Yassessment-for-internal-staff.docx" target="_blank">Accessibility impact assessement</a> (Word)</li>
+
+      </ul>
+  </div>
+</div>
+
+  
+  
 <!--Research  oct 17 image research-->
 <div class="demo-card demo-card--step4">
   <div class="head">
     <div class="number-box">
-      <span>18</span>
+      <span>19</span>
     </div>
     <h2><span class="small">17 Oct 2019</span>Online Research</h2>
   </div>
@@ -554,7 +584,7 @@
 <div class="demo-card demo-card--step4">
   <div class="head">
     <div class="number-box">
-      <span>19</span>
+      <span>20</span>
     </div>
     <h2><span class="small">16-17 Oct 2019</span>Online Research</h2>
   </div>
@@ -582,7 +612,7 @@
 <div class="demo-card demo-card--step4">
   <div class="head">
     <div class="number-box">
-      <span>20</span>
+      <span>21</span>
     </div>
     <h2><span class="small">25 Oct 2019</span>Online Research</h2>
   </div>
@@ -609,7 +639,7 @@
 <div class="demo-card demo-card--step3">
   <div class="head">
     <div class="number-box">
-      <span>21</span>
+      <span>22</span>
     </div>
     <h2><span class="small">29 Oct 2019</span>Lab Research</h2>
   </div>
@@ -644,7 +674,7 @@
 <div class="demo-card demo-card--step2">
   <div class="head">
     <div class="number-box">
-      <span>22</span>
+      <span>23</span>
     </div>
     <h2><span class="small">30 Oct  2019</span>F2F Research at Event</h2>
   </div>
@@ -676,7 +706,7 @@
 <div class="demo-card demo-card--step1">
   <div class="head">
     <div class="number-box">
-      <span>23</span>
+      <span>24</span>
     </div>
     <h2><span class="small">1 Nov 2019</span>Accessibility Research</h2>
   </div>
