--- a/webpages/SEPtimeline.html
+++ b/webpages/SEPtimeline.html
@@ -41,7 +41,7 @@
 <div class="demo-card key">
   <p style="text-align: center"><strong>KEY</strong></p>
   <p><span style="background-color: #f5c44b">&nbsp;</span> Accessibility</p>
-  <p><span style="background-color: #3ee9d1">&nbsp;</span> Event</p>
+  <p><span style="background-color: #3ee9d1">&nbsp;</span> Other</p>
   <p><span style="background-color: #ce43eb">&nbsp;</span> Lab research</p>
   <p><span style="background-color: #4d92eb">&nbsp;</span> Online research</p>
   <p><span style="background-color: #935300">&nbsp;</span> Partners collaboration - co-design</p>
@@ -174,10 +174,9 @@
         <li>- The real world problem we are trying to solve</li>
         <li>- Now and Next</li>
       </ul>
-
       <ul class="in_card">
         <br>
-        <li><a href="../files/SEP_Siobhan_May_24_SDEP_presentation_for__Board_Small.pdf" target="_blank"> Team overview of SEP</a></li>
+        <li><a href="../files/SEP_2019_May_Ambition.pdf" target="_blank"> Team overview of SEP</a></li>
       </ul>
   </div>
 </div>
@@ -242,7 +241,7 @@
       <ul class="in_card">
         <li>- Not overly technical fix's</li>
         <li>- Lots of core usability issues that are accentuated for A11Y audiences </li>
-        <br><li><a href="../files/SEP_2019_may_31_A11Y_Sprint6.pdf" target="_blank">June 2019 A11Y fix list Sprint 6</a></li>        
+        <br><li><a href="../files/SEP_2019_may_31_A11Y_Sprint6.pdf" target="_blank">June 2019 A11Y fix list Sprint 6</a></li>
         <br><li><a href="../files/SEP_2019_June_14_A11Y_Sprint7.pdf" target="_blank">June 2019 A11Y fix list Sprint 7</a></li>
       </ul>
   </div>
