SK change the a11y document from word to pdf

--- a/webpages/SEPtimeline.html
+++ b/webpages/SEPtimeline.html
@@ -547,7 +547,7 @@
         <li>- Reporting to review once we know more about what form it will take</li>
 
         <br>
-        <li><a href="../files/SEP-A11Yassessment-for-internal-staff.docx" target="_blank">Accessibility impact assessement</a> (Word)</li>
+        <li><a href="../files/SEP-A11Yassessment-for-internal-staff.pdf" target="_blank">Accessibility impact assessement</a> (pdf)</li>
 
       </ul>
   </div>
